# Candidate-MPC

./: .gitignore  README.md  compose.yaml  render.yaml
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml
backend/src/: config.py  dependencies.py  main.py
backend/src/asbhy/: router.py
backend/src/auth/: router.py
backend/src/campaigns/: router.py  schemas.py  tasks.py  utils.py
backend/src/campaigns/services/: lemlist_async.py  lemlist_sync.py
backend/src/candidates/: router.py  schemas.py  tasks.py  utils.py
backend/src/candidates/services/: apollo.py  ashby.py  blinded_resume.py  candidate_preferences.py  fathom.py
backend/src/core/: database.py  openai.py
backend/src/fathom/: router.py
backend/src/services/: candidate_lifecycle_service.py
backend/src/workers/: celery.py
frontend/: .env.example  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css
frontend/src/app/: index.tsx  provider.tsx  router.tsx
frontend/src/app/routes/app/: campaign.tsx  campaigns.tsx  candidate.tsx  candidates.tsx  new-candidate.tsx  (+2 more)
frontend/src/components/errors/: main.tsx
frontend/src/components/form/: Label.tsx  Select.tsx
frontend/src/components/header/: UserDropdown.tsx
frontend/src/components/layouts/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  AuthPageLayout.tsx  Backdrop.tsx
frontend/src/config/: paths.ts
frontend/src/features/candidate-selection/: index.ts
frontend/src/lib/: api-client.ts  auth.tsx  authorization.tsx
frontend/src/types/: api.ts  auth.ts
(+68 files in other folders)
