[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.1",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "fathom-python>=0.0.37",
    "ipykernel>=6.30.1",
    "openai>=1.99.9",
    "pydantic-extra-types[pendulum]>=2.10.5",
    "pypdf>=6.0.0",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "supabase>=2.18.1",
]
